--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@
   padding: 0;
   font-family: "Poppins";
 }
+
 ::-webkit-scrollbar-track {
   -webkit-box-shadow: inset 0 0 0px rgba(0, 0, 0, 0);
   border-radius: 2px;
@@ -96,4 +97,15 @@ video::-webkit-media-controls-pausebutton {
 
 table {
   margin-bottom: 20px;
+}
+
+.apexcharts-legend {
+  display: flex !important;
+  flex-direction: column !important;
+  align-items: start !important;
+  gap: 2px !important;
+}
+
+.apexcharts-legend-series {
+  margin-bottom: 10px !important;
 }
